(dev) finalizando implementacion CU 07 y CU 08